# crazy-workers

./: .coveragerc  .gitignore  .gitlab-ci.yml  AI.md  CLI.md  GEMINI.md  LICENSE  README.md  pyproject.toml  tests.py
.github/workflows/: ci.yml
crazy_workers/: __init__.py  _bootstrap.py  cli.py  client.py  manager.py  models.py  process.py  storage.py
crazy_workers/boot/: __init__.py  __main__.py  base.py  detect.py  entry.py  orchestrator.py  systemd.py  windows.py
crazy_workers/cli/: commands.py  discovery.py  main.py  ui.py
crazy_workers/cli/commands/: __init__.py  lister.py  params.py  restorer.py  starter.py  status.py  stopper.py
crazy_workers/core/: __init__.py  backend.py  engine.py  manager.py  recovery.py
crazy_workers/core/manager/: __init__.py  lister.py  recoverer.py  starter.py  stopper.py
crazy_workers/daemon/: __init__.py  __main__.py  reconciler.py  runner.py
crazy_workers/database/: __init__.py  schema.py  storage.py
crazy_workers/persistence/: __init__.py  models.py  storage.py
crazy_workers/testing/: __init__.py  backends.py  polling.py
docs/: RECONCILER_PLAN.md
example_app/: app.py
example_app/workers/: batch_worker.py  db_writer.py  example_worker.py  infinite_worker.py  nested_worker.py  simulator_worker.py  subprocess_worker.py
gitlab/: build.yml  publish.yml  test.yml
tests/: __init__.py  base.py  test_app.py  test_cli.py  test_cli_env.py  test_manager.py  test_nested.py  test_strict.py
tests/app/: test_app.py
tests/app/workers/: test_batch_worker.py  test_db_writer.py  test_example_worker.py  test_infinite_worker.py  test_nested_worker.py  test_simulator_worker.py  test_subprocess_worker.py  test_worker_units.py  test_workers.py
tests/boot/: test_base.py  test_detect.py  test_entry.py  test_orchestrator.py  test_systemd.py  test_windows.py
tests/cli/: test_cli.py  test_cli_env.py  test_cli_interactive.py  test_discovery.py  test_main.py  test_params.py
tests/cli/commands/: test_lister.py  test_params.py  test_restore.py  test_starter.py  test_status.py  test_stopper.py
tests/client/: test_client.py
tests/core/: test_bootstrap.py  test_engine.py  test_manager.py  test_nested.py  test_recovery.py  test_strict.py
tests/core/manager/: test_boot_wiring.py  test_db_integration.py  test_init.py  test_lister.py  test_recoverer.py  test_robustness.py  test_starter.py  test_stopper.py
tests/daemon/: test_main.py  test_reconciler.py
tests/database/: test_storage.py
tests/integration/: test_manager_integration.py  test_nested_workers.py  test_resilience.py
tests/testing/: test_fake_backend.py  test_polling.py
