[project]
name = "crazy-workers"
version = "0.1.0"
description = "A standalone Python library for managing background worker processes with an internal persistent state."
readme = "README.md"
authors = [{ name = "GioVanni Colasanto" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
crazy-workers = "crazy_workers.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "coverage",
    "flask",
]

[project.urls]
"Homepage" = "https://github.com/Vanni-broUser/crazy-workers"
"Bug Tracker" = "https://github.com/Vanni-broUser/crazy-workers/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crazy_workers*"]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ["E", "F", "T"]
ignore = ["COM812"]
